--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,8 @@
 blank_issues_enabled: false
 contact_links:
+  - name: Bug Report
+    url: https://github.com/xcir/ghsandbox/issues/new?template=bug-report.md
+    about: If you have questions or need help, please click here.
   - name: Getting Help
     url: https://varnish-cache.org/support/index.html
     about: If you have questions or need help, please click here.
