--- a/.github/ISSUE_TEMPLATE/bug-report-force.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report-force.yml
@@ -5,7 +5,7 @@ body:
   attributes:
     label: Expected Behavior
     description: aa
-    placeholder: |+
+    value: |+
       <!--- Did you check that there are no similar bug reports or pull requests? -->
       <!---
           If your panic happens in the child_sigsegv_handler function, look at the
@@ -28,7 +28,7 @@ body:
   attributes:
     label: Current Behavior
     description: aa
-    placeholder: |+
+    value: |+
       <!--- If describing a bug, tell us what happens instead of the expected behavior -->
       <!--- If suggesting a change/improvement, explain the difference from current behavior -->
   validations:
@@ -37,7 +37,7 @@ body:
   attributes:
     label: Possible Solution
     description: aa
-    placeholder: |+
+    value: |+
       <!--- Not obligatory, but suggest a fix/reason for the bug, -->
       <!--- or ideas how to implement the addition or change -->
   validations:
@@ -46,7 +46,7 @@ body:
   attributes:
     label: Steps to Reproduce (for bugs)
     description: aa
-    placeholder: |+
+    value: |+
       <!--- Provide a link to a live example, or an unambiguous set of steps to -->
       <!--- reproduce this bug. Include code to reproduce, if relevant -->
       1.
@@ -59,7 +59,7 @@ body:
   attributes:
     label: Context
     description: aa
-    placeholder: |+
+    value: |+
       <!--- How has this issue affected you? What are you trying to accomplish? -->
       <!--- Providing context helps us come up with a solution that is most useful in the real world -->
   validations:
