--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -3,3 +3,6 @@ contact_links:
   - name: Getting Help
     url: https://varnish-cache.org/support/index.html
     about: If you have questions or need help, please click here.
+  - name: Report a security vulnerability
+    url: https://varnish-cache.org/security/index.html#i-have-found-a-security-hole
+    about: Report a security vulnerability.
