--- a/.github/ISSUE_TEMPLATE/bug-report-force.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report-force.yml
@@ -4,7 +4,6 @@ body:
 - type: textarea
   attributes:
     label: Expected Behavior
-    description: aa
     value: |+
       <!--- Did you check that there are no similar bug reports or pull requests? -->
       <!---
@@ -27,7 +26,6 @@ body:
 - type: textarea
   attributes:
     label: Current Behavior
-    description: aa
     value: |+
       <!--- If describing a bug, tell us what happens instead of the expected behavior -->
       <!--- If suggesting a change/improvement, explain the difference from current behavior -->
@@ -36,7 +34,6 @@ body:
 - type: textarea
   attributes:
     label: Possible Solution
-    description: aa
     value: |+
       <!--- Not obligatory, but suggest a fix/reason for the bug, -->
       <!--- or ideas how to implement the addition or change -->
@@ -58,7 +55,6 @@ body:
 - type: textarea
   attributes:
     label: Context
-    description: aa
     value: |+
       <!--- How has this issue affected you? What are you trying to accomplish? -->
       <!--- Providing context helps us come up with a solution that is most useful in the real world -->
@@ -67,7 +63,7 @@ body:
 - type: input
   attributes:
     label: Varnish Cache version or revision
-    placeholder: 7.X.X
+    placeholder: 7.X.X / 251ef93
   validations:
     required: true
 - type: input
