--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -5,7 +5,9 @@ body:
   attributes:
     value: |+
       Did you check that there are no similar bug reports or pull requests?
+      
       If your panic happens in the child_sigsegv_handler function, look at the backtrace to determine whether it is similar to another issue. When in doubt, open a new one and it will be closed as a duplicate if needed.
+      
       If it's a packaging bug (including sysv or systemd services bugs) please open an issue on varnishcache/pkg-varnish-cache instead.
       
 - type: textarea
@@ -14,49 +16,36 @@ body:
     placeholder: |+
       If you're describing a bug, tell us what should happen.
       If you're suggesting a change/improvement, tell us how it should work.
-    value: |+
-      <!--- If you're describing a bug, tell us what should happen -->
-      <!--- If you're suggesting a change/improvement, tell us how it should work -->
-      <!---
-          If it's a feature request, please start a thread on the misc list instead.
-          https://www.varnish-cache.org/lists/mailman/listinfo/varnish-misc
-      -->
   validations:
     required: true
 - type: textarea
   attributes:
     label: Current Behavior
-    value: |+
-      <!--- If describing a bug, tell us what happens instead of the expected behavior -->
-      <!--- If suggesting a change/improvement, explain the difference from current behavior -->
+    placeholder: |+
+      If describing a bug, tell us what happens instead of the expected behavior.
+      If suggesting a change/improvement, explain the difference from current behavior.
   validations:
     required: true
 - type: textarea
   attributes:
     label: Possible Solution
     value: |+
-      <!--- Not obligatory, but suggest a fix/reason for the bug, -->
-      <!--- or ideas how to implement the addition or change -->
-  validations:
-    required: true
+      Not obligatory, but suggest a fix/reason for the bug, or ideas how to implement the addition or change
 - type: textarea
   attributes:
     label: Steps to Reproduce (for bugs)
-    value: |+
-      <!--- Provide a link to a live example, or an unambiguous set of steps to -->
-      <!--- reproduce this bug. Include code to reproduce, if relevant -->
+    placeholder: |+
+      Provide a link to a live example, or an unambiguous set of steps to reproduce this bug. Include code to reproduce, if relevant.
       1.
       2.
       3.
       4.
-  validations:
-    required: true
 - type: textarea
   attributes:
     label: Context
-    value: |+
-      <!--- How has this issue affected you? What are you trying to accomplish? -->
-      <!--- Providing context helps us come up with a solution that is most useful in the real world -->
+    placeholder: |+
+      How has this issue affected you? What are you trying to accomplish?
+      Providing context helps us come up with a solution that is most useful in the real world.
   validations:
     required: true
 - type: input
