--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -29,7 +29,7 @@ body:
 - type: textarea
   attributes:
     label: Possible Solution
-    value: |+
+    placeholder: |+
       Not obligatory, but suggest a fix/reason for the bug, or ideas how to implement the addition or change
 - type: textarea
   attributes:
