--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -53,7 +53,7 @@ body:
 - type: input
   attributes:
     label: Varnish Cache version
-    placeholder: varnishd -V output ex: varnishd (varnish-7.3.0 revision 84d79120b6d17b11819a663a93160743f293e63f)
+    placeholder: "varnishd -V output ex: varnishd (varnish-7.3.0 revision 84d79120b6d17b11819a663a93160743f293e63f)"
   validations:
     required: true
 - type: input
