--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -52,7 +52,8 @@ body:
     required: true
 - type: input
   attributes:
-    label: Varnish Cache version(varnishd -V output)
+    label: Varnish Cache version
+    description: "varnishd -V"
     placeholder: "varnishd (varnish-7.3.0 revision 84d79120b6d17b11819a663a93160743f293e63f)"
 - type: input
   attributes:
