--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -23,7 +23,7 @@ body:
 - type: textarea
   attributes:
     label: Current Behavior
-    placeholder: |+
+    description: |+
       If describing a bug, tell us what happens instead of the expected behavior.
       If suggesting a change/improvement, explain the difference from current behavior.
   validations:
