--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -31,13 +31,14 @@ body:
 - type: textarea
   attributes:
     label: Possible Solution
-    placeholder: |+
+    description: |+
       Not obligatory, but suggest a fix/reason for the bug, or ideas how to implement the addition or change
 - type: textarea
   attributes:
     label: Steps to Reproduce (for bugs)
-    placeholder: |+
+    description: |+
       Provide a link to a live example, or an unambiguous set of steps to reproduce this bug. Include code to reproduce, if relevant.
+    placeholder: |+
       1.
       2.
       3.
@@ -45,7 +46,7 @@ body:
 - type: textarea
   attributes:
     label: Context
-    placeholder: |+
+    description: |+
       How has this issue affected you? What are you trying to accomplish?
       Providing context helps us come up with a solution that is most useful in the real world.
   validations:
